@@ -1,6 +1,6 @@
 {
     "name": "q",
-    "description": "defer/when-style promises (CommonJS/Promises/B)",
+    "description": "defer/when-style promises (CommonJS/Promises/A,B,D)",
     "version": "0.2.5",
     "homepage": "http://github.com/kriskowal/q/",
     "author": "Kris Kowal <kris@cixar.com> (http://github.com/kriskowal/)",
