@@ -7,6 +7,7 @@ exports['test rosolve & reject'] = require('./resolve-reject')
 exports['test chains of promises'] = require('./promised-chains')
 exports['test multiple listeners'] = require('./multiple-listeners')
 exports['test methods'] = require('./methods')
+exports['test thenable'] = require('./thenable')
 
 if (module == require.main) require('test').run(exports)
 
